--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,9 @@
 
         </pre>
         <ul>
-          <li><a href="/admin/">admin</a></li>
-          <li><a href="/restapi/">restapi</a></li>
+          <li><a href="/admin">admin</a></li>
+          <li><a href="/restapi">restapi</a></li>
+          <li><a href="/random/dsdkkd">random</a></li>
         </ul>
       </div>
     </div>
