Remove routing. We're going to start again with that.

--- a/public/index.html
+++ b/public/index.html
@@ -14,31 +14,31 @@
 -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=0.9">
-    <meta name="description" content="Full Stack Isomorphic JavaScript Development">
-    <meta name="author" content="Chris Dorward <listingslab@gmail.com>">
-  	<title>Listingslab</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Full Stack Isomorphic JavaScript App">
+    <meta name="author" content="listingsab <listingslab@gmail.com> (http://listingslab.com)">
+  	<title>Invitr</title>
     <link rel="icon" href="./favicon.ico">
     <link href="./css/main.css" rel="stylesheet">  
   </head>
 
   <body>
-    <div id="wrapper">
-      <div id="main">
-        <pre>
-  _         _ _       
- (_)_ ___ _(_) |_ _ _ 
- | | ' \ V / |  _| '_|
-|_|_||_\_/|_|\__|_| 
 
-        </pre>
-        <ul>
-          <li><a href="/admin">admin</a></li>
-          <li><a href="/restapi">restapi</a></li>
-          <li><a href="/random/dsdkkd">random</a></li>
-        </ul>
-      </div>
-    </div>
+    <pre>
+     _         _ _       
+    (_)_ ___ _(_) |_ _ _ 
+    | | ' \ V / |  _| '_|
+    |_|_||_\_/|_|\__|_|   by <a href="http://listingslab.com" target="_blank" title="Full Stack Isomorphic JavaScript Development">listingslab</a>
+
+    </pre>
+
+    <ul class="navlist">
+      <li><a href="/">home</a></li>
+      <li><a href="/api">api</a></li>
+      <li><a href="/admin">admin</a></li>
+      <li><a href="/random/dsdkkd">404 Not Found</a></li>
+    </ul>
+
   </body>
 </html>
 
