working on the router

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,8 @@
     <ul class="navlist">
       <li><a href="/">home</a></li>
       <li><a href="/api">api</a></li>
-      <li><a href="/admin">admin</a></li>
+      <li><a href="/host">host</a></li>
+      <li><a href="/guest">guest</a></li>
       <li><a href="/random/dsdkkd">404 Not Found</a></li>
     </ul>
 
