build a simple app

--- a/public/host.html
+++ b/public/host.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Full Stack Isomorphic JavaScript App">
     <meta name="author" content="listingsab <listingslab@gmail.com> (http://listingslab.com)">
-  	<title>Invitr</title>
+  	<title>Invitr Host</title>
     <link rel="icon" href="./favicon.ico">
     <link href="./css/main.css" rel="stylesheet">  
   </head>
@@ -25,20 +25,13 @@
   <body>
 
     <pre>
-     _         _ _       
-    (_)_ ___ _(_) |_ _ _ 
-    | | ' \ V / |  _| '_|
-    |_|_||_\_/|_|\__|_|   by <a href="http://listingslab.com" target="_blank" title="Full Stack Isomorphic JavaScript Development">listingslab</a>
+  _         _ _                 _       _      
+ (_)_ ___ _(_) |_ _ _   __ _ __| |_ __ (_)_ _  
+ | | ' \ V / |  _| '_| / _` / _` | '  \| | ' \ 
+ |_|_||_\_/|_|\__|_|   \__,_\__,_|_|_|_|_|_||_|
+                                               
 
     </pre>
-
-    <ul class="navlist">
-      <li><a href="/">home</a></li>
-      <li><a href="/api">api</a></li>
-      <li><a href="/host">host</a></li>
-      <li><a href="/guest">guest</a></li>
-      <li><a href="/random/dsdkkd">404 Not Found</a></li>
-    </ul>
 
   </body>
 </html>
