--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Full Stack Isomorphic JavaScript App">
     <meta name="author" content="listingsab <listingslab@gmail.com> (http://listingslab.com)">
-  	<title>Invitr Host</title>
+  	<title>Invitr Guest</title>
     <link rel="icon" href="./favicon.ico">
     <link href="./css/main.css" rel="stylesheet">  
   </head>
@@ -25,11 +25,10 @@
   <body>
 
     <pre>
-  _         _ _                 _       _      
- (_)_ ___ _(_) |_ _ _   __ _ __| |_ __ (_)_ _  
- | | ' \ V / |  _| '_| / _` / _` | '  \| | ' \ 
- |_|_||_\_/|_|\__|_|   \__,_\__,_|_|_|_|_|_||_|
-                                               
+     <a href="/api/">_</a>         _ _       
+    (_)_ ___ _(_) |_ _ _ 
+    | | ' \ V / |  _| '_|
+    |_|_||_\_/|_|\__|_|
 
     </pre>
 
