--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <body>
 
     <pre>
-     <a href="/api/">_</a>         _ _       
+     <a href="/api/verify/">_</a>         _ _       
     (_)_ ___ _(_) |_ _ _ 
     | | ' \ V / |  _| '_|
     |_|_||_\_/|_|\__|_|
