Start developing the React App

--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<!--
-  _ _     _   _                 _       _     
- | (_)___| |_(_)_ __   __ _ ___| | __ _| |__  
- | | / __| __| | '_ \ / _` / __| |/ _` | '_ \ 
- | | \__ \ |_| | | | | (_| \__ \ | (_| | |_) |
- |_|_|___/\__|_|_| |_|\__, |___/_|\__,_|_.__/ 
-                      |___/
- 
- Full Stack Isomorphic JavaScript Development
- 
--->
+    <!--
+      _ _     _   _                 _       _     
+     | (_)___| |_(_)_ __   __ _ ___| | __ _| |__  
+     | | / __| __| | '_ \ / _` / __| |/ _` | '_ \ 
+     | | \__ \ |_| | | | | (_| \__ \ | (_| | |_) |
+     |_|_|___/\__|_|_| |_|\__, |___/_|\__,_|_.__/ 
+                          |___/
+     
+     Full Stack Isomorphic JavaScript Development
+     
+    -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Full Stack Isomorphic JavaScript App">
+    <meta name="description" content="Invite and track guests to events like weddings">
     <meta name="author" content="listingsab <listingslab@gmail.com> (http://listingslab.com)">
   	<title>Invitr Guest</title>
     <link rel="icon" href="./favicon.ico">
@@ -24,25 +24,19 @@
 
   <body>
 
-    <pre>
-     <a href="/api/verify/">_</a>         _ _       
-    (_)_ ___ _(_) |_ _ _ 
-    | | ' \ V / |  _| '_|
-    |_|_||_\_/|_|\__|_|
+    <div id="react-app">
+      <pre>
+       _         _ _       
+      (_)_ ___ _(_) |_ _ _ 
+      | | ' \ V / |  _| '_|
+      |_|_||_\_/|_|\__|_|
 
-    </pre>
+      </pre>
+    </div>
 
+    <script src="./js/react-app.js"></script>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
 
 
 
