--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Invite and track guests to events like weddings">
     <meta name="author" content="listingsab <listingslab@gmail.com> (http://listingslab.com)">
-  	<title>Invitr Guest</title>
+  	<title>Invitr</title>
     <link rel="icon" href="./favicon.ico">
     <link href="./css/main.css" rel="stylesheet">  
   </head>
