--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
 
       </pre>
     </div>
-
+    <script src="https://fb.me/react-15.0.1.min.js"></script>
+    <script src="https://fb.me/react-dom-15.0.1.min.js"></script>
     <script src="./js/react-app.js"></script>
   </body>
 </html>
