--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
     <meta name="author" content="listingsab <listingslab@gmail.com> (http://listingslab.com)">
   	<title>Invitr</title>
     <link rel="icon" href="./favicon.ico">
-    <link href="./css/main.css" rel="stylesheet">  
+    <link href="./css/main.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>  
   </head>
 
   <body>
