--- a/public/index.html
+++ b/public/index.html
@@ -27,15 +27,15 @@
 
     <div id="react-app">
       <pre>
-        _              _ _             _         _ _       
-       | |___  __ _ __| (_)_ _  __ _  (_)_ ___ _(_) |_ _ _ 
-       | / _ \/ _` / _` | | ' \/ _` | | | ' \ V / |  _| '_|
-       |_\___/\__,_\__,_|_|_||_\__, | |_|_||_\_/|_|\__|_|  
-                               |___/                       
+        _         _ _       
+       (_)_ ___ _(_) |_ _ _ 
+       | | ' \ V / |  _| '_|
+       |_|_||_\_/|_|\__|_|  
+                                                 
       </pre>
     </div>
-    <script src="https://fb.me/react-15.0.1.min.js"></script>
-    <script src="https://fb.me/react-dom-15.0.1.min.js"></script>
+    <script src="./js/vendor/facebook/react-15.0.1.min.js"></script>
+    <script src="./js/vendor/facebook/react-dom-15.0.1.min.js"></script>
     <script src="./js/react-app.js"></script>
   </body>
 </html>
