--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Invite and track guests to events like weddings">
     <meta name="author" content="listingsab <listingslab@gmail.com> (http://listingslab.com)">
+
   	<title>Invitr</title>
-    <link rel="icon" href="./favicon.ico">
+
+    <link href="./js/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="./css/main.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>  
+    <link rel="icon" href="./favicon.ico">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
   </head>
 
   <body>
@@ -34,19 +43,17 @@
                                                  
       </pre>
     </div>
+
+    <script src="./js/vendor/jquery/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="./js/vendor/jquery/jquery.min.js"><\/script>')</script>
+    <script src="./js/vendor/bootstrap/js/bootstrap.min.js"></script>
+
     <script src="./js/vendor/facebook/react-15.0.1.min.js"></script>
     <script src="./js/vendor/facebook/react-dom-15.0.1.min.js"></script>
     <script src="./js/react-app.js"></script>
+    
   </body>
 </html>
-
-
-
-
-
-
-
-
 
 <!--
 
