--- a/public/design.html
+++ b/public/design.html
@@ -56,20 +56,20 @@
           </div>
 
           <div class="inner cover">
-            <!-- <h1 class="cover-heading">Cover your page.</h1>
+            <h1 class="cover-heading">Cover your page.</h1>
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
 
             
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi maximus eros ut nunc maximus placerat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur eget fringilla lectus. Praesent a purus fringilla, dignissim neque ac, luctus velit. Aenean ultrices rutrum venenatis. Aenean sit amet eleifend ligula, eu pharetra nunc. Donec vestibulum ornare mi ac semper. Curabitur interdum congue justo. In ut fermentum urna. Donec nec ipsum ac libero mollis sagittis a a tortor. Donec nec lectus vestibulum, lobortis orci ut, ultrices nibh. Nulla facilisi.</p> -->
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi maximus eros ut nunc maximus placerat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur eget fringilla lectus. Praesent a purus fringilla, dignissim neque ac, luctus velit. Aenean ultrices rutrum venenatis. Aenean sit amet eleifend ligula, eu pharetra nunc. Donec vestibulum ornare mi ac semper. Curabitur interdum congue justo. In ut fermentum urna. Donec nec ipsum ac libero mollis sagittis a a tortor. Donec nec lectus vestibulum, lobortis orci ut, ultrices nibh. Nulla facilisi.</p>
 
-            <img src="./img/blackboard/center_circle.png" />
+            <img src="./img/save_the_date.png" />
 
-           <!--  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi maximus eros ut nunc maximus placerat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur eget fringilla lectus. Praesent a purus fringilla, dignissim neque ac, luctus velit. Aenean ultrices rutrum venenatis. Aenean sit amet eleifend ligula, eu pharetra nunc. Donec vestibulum ornare mi ac semper. Curabitur interdum congue justo. In ut fermentum urna. Donec nec ipsum ac libero mollis sagittis a a tortor. Donec nec lectus vestibulum, lobortis orci ut, ultrices nibh. Nulla facilisi.</p>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi maximus eros ut nunc maximus placerat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur eget fringilla lectus. Praesent a purus fringilla, dignissim neque ac, luctus velit. Aenean ultrices rutrum venenatis. Aenean sit amet eleifend ligula, eu pharetra nunc. Donec vestibulum ornare mi ac semper. Curabitur interdum congue justo. In ut fermentum urna. Donec nec ipsum ac libero mollis sagittis a a tortor. Donec nec lectus vestibulum, lobortis orci ut, ultrices nibh. Nulla facilisi.</p> -->
 
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi maximus eros ut nunc maximus placerat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur eget fringilla lectus. Praesent a purus fringilla, dignissim neque ac, luctus velit. Aenean ultrices rutrum venenatis. Aenean sit amet eleifend ligula, eu pharetra nunc. Donec vestibulum ornare mi ac semper. Curabitur interdum congue justo. In ut fermentum urna. Donec nec ipsum ac libero mollis sagittis a a tortor. Donec nec lectus vestibulum, lobortis orci ut, ultrices nibh. Nulla facilisi.</p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi maximus eros ut nunc maximus placerat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur eget fringilla lectus. Praesent a purus fringilla, dignissim neque ac, luctus velit. Aenean ultrices rutrum venenatis. Aenean sit amet eleifend ligula, eu pharetra nunc. Donec vestibulum ornare mi ac semper. Curabitur interdum congue justo. In ut fermentum urna. Donec nec ipsum ac libero mollis sagittis a a tortor. Donec nec lectus vestibulum, lobortis orci ut, ultrices nibh. Nulla facilisi.</p> -->
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi maximus eros ut nunc maximus placerat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur eget fringilla lectus. Praesent a purus fringilla, dignissim neque ac, luctus velit. Aenean ultrices rutrum venenatis. Aenean sit amet eleifend ligula, eu pharetra nunc. Donec vestibulum ornare mi ac semper. Curabitur interdum congue justo. In ut fermentum urna. Donec nec ipsum ac libero mollis sagittis a a tortor. Donec nec lectus vestibulum, lobortis orci ut, ultrices nibh. Nulla facilisi.</p>
 
             
           </div>
