--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,12 @@
 
   <body>
 
-    <div id="react-app">
+    <div class="site-wrapper" id="react-app">
+      <div class="site-wrapper-inner">
+            <!-- <img src="./img/preloaders/flower.gif" /> -->
+            <!-- <img src="./img/preloaders/infinity.gif" /> -->
+            <img src="./img/preloaders/wifi.gif" />
+      </div>
     </div>
 
     <script src="./js/vendor/jquery/jquery.min.js"></script>
@@ -43,7 +48,7 @@
 
     <script src="./js/vendor/facebook/react-15.0.1.min.js"></script>
     <script src="./js/vendor/facebook/react-dom-15.0.1.min.js"></script>
-    <script src="./js/react-app.js"></script>
+    <!-- <script src="./js/react-app.js"></script> -->
     
   </body>
 </html>
