--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 
     <script src="./js/vendor/facebook/react-15.0.1.min.js"></script>
     <script src="./js/vendor/facebook/react-dom-15.0.1.min.js"></script>
-    <!-- <script src="./js/react-app.js"></script> -->
+    <script src="./js/react-app.js"></script>
     
   </body>
 </html>
